update readme and swagger doc
