# driver-location/cmd/docs/swagger.json
@@ -17,6 +17,17 @@
                     "drivers"
                 ],
                 "summary": "Create a driver location",
+                "parameters": [
+                    {
+                        "description": "Location",
+                        "name": "location",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateDriverLocationRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Driver location created",
